# VLM-evaluation-framework

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
configs/scenarios/: coco_captioning.yaml  demo.yaml  full_suite.yaml
examples/: custom_vlm_example.py  run_evaluation.py
tests/: test_api.py  test_config_and_dataset.py  test_metrics.py  test_models_and_engine.py
vlm_eval/: __init__.py  cli.py
vlm_eval/core/: __init__.py  config.py  engine.py  scenario.py
vlm_eval/datasets/: __init__.py  loader.py
vlm_eval/metrics/: __init__.py  registry.py
vlm_eval/models/: __init__.py  registry.py
vlm_eval/reporters/: __init__.py  html_reporter.py
